--- a/src/css/sass/style.scss
+++ b/src/css/sass/style.scss
@@ -16,4 +16,9 @@
 @import "secList";
 @import "scenery";
 @import "news";
+@import "pager";
+@import "play";
+@import "big";
+@import "live";
+@import "happy";
 
