--- a/src/css/concat/common.css
+++ b/src/css/concat/common.css
@@ -101,6 +101,7 @@
 	.pw { width: 90%; }
 }
 /* fix */
+.tar{ text-align: right; }
 .btn{ display: inline-block; vertical-align: bottom; }
 .tb{ display: table; table-layout: fixed; width: 100%; height: 100%; }
 .tbc{ display: table-cell; vertical-align: middle; }
