--- a/src/css/sass/_feature.scss
+++ b/src/css/sass/_feature.scss
@@ -1,8 +1,8 @@
 .feature-nav{
   position: fixed;
   z-index: 900;
-  right: 50%;
-  margin-right: -(960px / 2) - 64px - 48px;
+  left: 25% + 8.7%;
+  margin-left: 856px + 48px;
   top: 50%;
   transform: translateY(-50%);
   top: 180px\9;
