--- a/src/css/sass/_page.scss
+++ b/src/css/sass/_page.scss
@@ -12,10 +12,8 @@
 
 .linen-fixbg{
     top: 80px + 100px;
-    left: auto;
-    width: 50%;
-    padding-left: 480px;
-    box-sizing: content-box;
+    right: 0;
+    left: 25%;
     background: url('../images/linen1.jpg') right top;
 }
 
@@ -24,4 +22,28 @@
     .ab-nav{
         margin-bottom: 80px;
     }
+}
+
+.page-layout{
+    margin-left: 25%;
+    padding: 0 8.7%;
+}
+
+.play-pw{
+    width: 1080px;
+    max-width: 100%;
+}
+
+.ab-pw{
+    width: 856px;
+}
+
+.page-tb{
+    padding-top: 120px;
+    padding-bottom: 160px;
+}
+
+.detail-tb{
+    padding-top: 150px;
+    padding-bottom: 160px;
 }
