--- a/src/css/sass/_pnav.scss
+++ b/src/css/sass/_pnav.scss
@@ -1,11 +1,9 @@
 .pnav{
   position: fixed;
   z-index: 900;
-  top: 80px;
-  left: 50%;
-  margin-left: -(960px / 2) - 140px - 100px;
-  margin-top: 100px;
-  width: 140px;
+  top: 180px;
+  left: 12.5%;
+  max-width: 12.5%;
   a{
     display: block;
     position: relative;
